--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- Latest compiled and minified CSS -->
 
 
-  <title>splicejunction.iobio</title>
+  <title>rnasplice.iobio</title>
 </head>
 
 <body>
